print test description in setup and tear down and downgrade to jdk 21